--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -35,5 +35,29 @@
     "description": "Confirm password text for sign up page",
     "type": "text",
     "placeholders": {}
+  },
+  "language": "idioma",
+  "@language": {
+    "description": "The word 'language'",
+    "type": "text",
+    "placeholders": {}
+  },
+  "loginCTA": "Qué bueno verte.",
+  "@loginCTA": {
+    "description": "Call to Action shown on the login page",
+    "type": "text",
+    "placeholders": {}
+  },
+  "signupCTA": "Un gusto conocerte.",
+  "@signupCTA": {
+    "description": "Call to Action shown on the signup page",
+    "type": "text",
+    "placeholders": {}
+  },
+  "welcomeCTA": "Bienvenidos.",
+  "@welcomeCTA": {
+    "description": "Call to Action shown on the welcome page",
+    "type": "text",
+    "placeholders": {}
   }
 }
