--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -78,5 +78,11 @@
     "description": "Previous Entries title",
     "type": "text",
     "placeholders": {}
+  },
+  "journalEntryHint": "Write your thoughts...",
+  "@journalEntryHint": {
+    "description": "Journal entry hint text",
+    "type": "text",
+    "placeholders": {}
   }
 }
