--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -90,5 +90,41 @@
     "description": "Button text for links to the About page",
     "type": "text",
     "placeholders": {}
+  },
+  "deleteEntryConfirmPrompt": "Are you sure you want to delete this entry? This cannot be undone.",
+  "@deleteEntryConfirmPrompt": {
+    "description": "Warning text when deleting a journal entry",
+    "type": "text",
+    "placeholders": {}
+  },
+  "deleteEntryYes": "Yes, delete it",
+  "@deleteEntryYes": {
+    "description": "Action button for the user agreeing to delete an entry",
+    "type": "text",
+    "placeholders": {}
+  },
+  "deleteEntryNo": "No, do not delete it",
+  "@deleteEntryNo": {
+    "description": "Action button for the user not wanting to delete a message",
+    "type": "text",
+    "placeholders": {}
+  },
+  "deleteEntryHeader": "Delete Journal Entry",
+  "@deleteEntryHeader": {
+    "description": "Header for delete entry dialog",
+    "type": "text",
+    "placeholders": {}
+  },
+  "shareJournalEntryText": "I show my gratitude with Grateful. Download it here:",
+  "@shareJournalEntryText": {
+    "description": "Default share text when a user shares a journal entry",
+    "type": "text",
+    "placeholders": {}
+  },
+  "shareGrateful": "Share Grateful",
+  "@shareGrateful": {
+    "description": "CTA to share grateful",
+    "type": "text",
+    "placeholders": {}
   }
 }
