--- a/lib/l10n/intl_messages.arb
+++ b/lib/l10n/intl_messages.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2020-01-15T18:10:44.388155",
+  "@@last_modified": "2020-02-04T10:03:05.309473",
   "logIn": "Log In",
   "@logIn": {
     "description": "The \"log in\" call to action",
@@ -123,6 +123,24 @@
   "shareGrateful": "Share Grateful",
   "@shareGrateful": {
     "description": "CTA to share grateful",
+    "type": "text",
+    "placeholders": {}
+  },
+  "leaveFeedback": "Leave Feedback",
+  "@leaveFeedback": {
+    "description": "Menu item to leave feedback",
+    "type": "text",
+    "placeholders": {}
+  },
+  "thanksForYourFeedback": "Thank you for your feedback!",
+  "@thanksForYourFeedback": {
+    "description": "Message shown to a user when they leave feedback from the feedback form",
+    "type": "text",
+    "placeholders": {}
+  },
+  "feedbackHint": "Let us know what you think",
+  "@feedbackHint": {
+    "description": "Hint text for user in the feedback form textfield",
     "type": "text",
     "placeholders": {}
   }
