--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -126,5 +126,23 @@
     "description": "CTA to share grateful",
     "type": "text",
     "placeholders": {}
+  },
+  "leaveFeedback": "Dejar comentarios",
+  "@leaveFeedback": {
+    "description": "Menu item to leave feedback",
+    "type": "text",
+    "placeholders": {}
+  },
+  "thanksForYourFeedback": "¡Gracias por tus comentarios!",
+  "@thanksForYourFeedback": {
+    "description": "Message shown to a user when they leave feedback from the feedback form",
+    "type": "text",
+    "placeholders": {}
+  },
+  "feedbackHint": "Déjanos saber tu opinión",
+  "@feedbackHint": {
+    "description": "Hint text for user in the feedback form textfield",
+    "type": "text",
+    "placeholders": {}
   }
 }
