--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -59,5 +59,23 @@
     "description": "Call to Action shown on the welcome page",
     "type": "text",
     "placeholders": {}
+
+  "leaveFeedback": "Leave Feedback",
+  "@leaveFeedback": {
+    "description": "Menu item to leave feedback",
+    "type": "text",
+    "placeholders": {}
+  },
+  "thanksForYourFeedback": "Thank you for your feedback!",
+  "@thanksForYourFeedback": {
+    "description": "Message shown to a user when they leave feedback from the feedback form",
+    "type": "text",
+    "placeholders": {}
+  },
+  "feedbackHint": "Let us know what you think",
+  "@feedbackHint": {
+    "description": "Hint text for user in the feedback form textfield",
+    "type": "text",
+    "placeholders": {}
   }
 }
